Add missing environment variables

--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,10 @@ repositories {
     mavenCentral()
     maven {
         url = 'https://maven.pkg.github.com/ipregistry/ipregistry-ineter'
+        credentials {
+            username = project.findProperty("gpr.user") ?: System.getenv("GH_PACKAGES_USER")
+            password = project.findProperty("gpr.key") ?: System.getenv("GH_PACKAGES_WRITE_TOKEN")
+        }
     }
 }
 
